--- a/.env
+++ b/.env
@@ -6,11 +6,11 @@ APP_LOG_LEVEL=debug
 APP_URL=http://www.v.com
 
 DB_CONNECTION=mysql
-DB_HOST=null
-DB_PORT=3306
-DB_DATABASE=null
-DB_USERNAME=null
-DB_PASSWORD=null
+DB_HOST=10.1.100.192
+DB_PORT=3366
+DB_DATABASE=peach
+DB_USERNAME=clark
+DB_PASSWORD=123456
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
