--- a/.env
+++ b/.env
@@ -5,6 +5,9 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://www.v.com
 
+SESSION_COOKIE=PHPSESSID
+SESSION_SECURE_COOKIE=false
+
 DB_CONNECTION=mysql
 DB_HOST=null
 DB_PORT=3306
