--- a/.env
+++ b/.env
@@ -5,8 +5,17 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://www.v.com
 
+
+APP_LOG=daily
 SESSION_COOKIE=PHPSESSID
 SESSION_SECURE_COOKIE=false
+WEB_CDN_STATIC=http://cdn.v.com
+STATIC_PATH=/
+PIC_PATH=/
+IMG_PATH=/
+OPEN_WEB=1
+PICTURE_CDN_PATH=/
+JS_PATH=/
 
 DB_CONNECTION=mysql
 DB_HOST=10.1.100.192
