--- a/.env
+++ b/.env
@@ -11,10 +11,10 @@ SESSION_COOKIE=SESSID
 SESSION_SECURE_COOKIE=false
 
 DB_CONNECTION=mysql
-DB_HOST=10.1.100.192
-DB_PORT=3366
-DB_DATABASE=peach
-DB_USERNAME=clark
+DB_HOST=10.1.100.162
+DB_PORT=3306
+DB_DATABASE=vv
+DB_USERNAME=video
 DB_PASSWORD=123456
 
 BROADCAST_DRIVER=log
@@ -23,7 +23,7 @@ SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 QUEUE_DRIVER=redis
 
-REDIS_HOST=10.1.100.192
+REDIS_HOST=10.1.100.161
 REDIS_PASSWORD=123456
 REDIS_PORT=6379
 
