--- a/.env
+++ b/.env
@@ -11,11 +11,15 @@ SESSION_COOKIE=SESSID
 SESSION_SECURE_COOKIE=false
 
 DB_CONNECTION=mysql
-DB_HOST=10.1.100.162
-DB_PORT=3306
+
 DB_DATABASE=vv
 DB_USERNAME=video
 DB_PASSWORD=123456
+
+DB_READ_0=host:10.1.100.161,username:${DB_USERNAME},password:${DB_PASSWORD}
+DB_READ_1=host:10.1.100.161,username:${DB_USERNAME},password:${DB_PASSWORD}
+DB_WRITE_0=host:10.1.100.162,username:${DB_USERNAME},password:${DB_PASSWORD}
+DB_WRITE_1=host:10.1.100.162,username:${DB_USERNAME},password:${DB_PASSWORD}
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
