--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=Vapi
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:N3s8AyUJ7N5ComqkegMpv3BDDSsV5NW8I0f781zGy6I=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_LOG_LEVEL=debug
 APP_URL=
 
