--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "barryvdh/laravel-ide-helper": "^2.4",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
+        "hashids/hashids": "^3.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "lcobucci/jwt": "^3.2",
