--- a/.env
+++ b/.env
@@ -17,9 +17,9 @@ DB_USERNAME=video
 DB_PASSWORD=123456
 
 DB_READ_0=host:10.1.100.161,username:${DB_USERNAME},password:${DB_PASSWORD}
-DB_READ_1=host:10.1.100.161,username:${DB_USERNAME},password:${DB_PASSWORD}
+#DB_READ_1=host:10.1.100.161,username:${DB_USERNAME},password:${DB_PASSWORD}
 DB_WRITE_0=host:10.1.100.162,username:${DB_USERNAME},password:${DB_PASSWORD}
-DB_WRITE_1=host:10.1.100.162,username:${DB_USERNAME},password:${DB_PASSWORD}
+#DB_WRITE_1=host:10.1.100.162,username:${DB_USERNAME},password:${DB_PASSWORD}
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
