--- a/.env
+++ b/.env
@@ -29,13 +29,13 @@ REDIS_HOST=10.1.100.161
 REDIS_PASSWORD=123456
 REDIS_PORT=6379
 
-SPARKPOST_SECRET=63819aca89f76d580f10639141c9484110344b92
+#SPARKPOST_SECRET=63819aca89f76d580f10639141c9484110344b92
 #MAIL_DRIVER=sparkpost
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
+MAIL_HOST=smtp.sparkpostmail.com
 MAIL_PORT=2525
-MAIL_USERNAME=e592566d00bea3
-MAIL_PASSWORD=1ea3b8925ad45a
+MAIL_USERNAME=SMTP_Injection
+MAIL_PASSWORD=63819aca89f76d580f10639141c9484110344b92
 MAIL_ENCRYPTION=tls
 
 PUSHER_APP_ID=
