--- a/.env
+++ b/.env
@@ -16,8 +16,8 @@ DB_DATABASE=vvv
 DB_USERNAME=video
 DB_PASSWORD=123456
 
-DB_READ=host:10.1.100.161,username:${DB_USERNAME},password:${DB_PASSWORD}
-DB_WRITE=host:10.1.100.162,username:${DB_USERNAME},password:${DB_PASSWORD}
+DB_READ=host:10.1.100.161,port:3306,username:${DB_USERNAME},password:${DB_PASSWORD}
+DB_WRITE=host:10.1.100.162,port:3306,username:${DB_USERNAME},password:${DB_PASSWORD}
 
 
 BROADCAST_DRIVER=log
