--- a/.env
+++ b/.env
@@ -12,12 +12,12 @@ SESSION_SECURE_COOKIE=false
 
 DB_CONNECTION=mysql
 
-DB_DATABASE=vvv
-DB_USERNAME=video
-DB_PASSWORD=123456
+DB_DATABASE=v4_video
+DB_USERNAME=root
+DB_PASSWORD=Abc_123456
 
-DB_READ=host:10.1.100.161,port:3306,username:${DB_USERNAME},password:${DB_PASSWORD}
-DB_WRITE=host:10.1.100.162,port:3306,username:${DB_USERNAME},password:${DB_PASSWORD}
+DB_READ=host:10.2.121.15,port:3306,username:${DB_USERNAME},password:${DB_PASSWORD}
+DB_WRITE=host:10.2.121.15,port:3306,username:${DB_USERNAME},password:${DB_PASSWORD}
 
 
 BROADCAST_DRIVER=log
@@ -26,7 +26,7 @@ SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 QUEUE_DRIVER=redis
 
-REDIS_HOST=10.1.100.161
+REDIS_HOST=10.2.121.15
 REDIS_PASSWORD=123456
 REDIS_PORT=6379
 
