--- a/deploy/nginx/vapi.conf
+++ b/deploy/nginx/vapi.conf
@@ -4,6 +4,14 @@ server {
     error_log /var/log/nginx/vapi_error.log info;
     root /data/www/vapi/public;
     index index.php;
+    set $request_url $request_uri;
+    location ~ ^/ping\.php {
+     try_files $uri /index.php?/m/ping;
+    }
+    location ~ ^/domains\.php {
+    try_files $uri /index.php?/m/domain_list;
+    }
+
 
     location ~ ^/api/(.*)$ {
         try_files /$1 /index.php?$query_string;
@@ -11,7 +19,17 @@ server {
     location ~ \.php$ {
         include fastcgi.conf;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass   127.0.0.1:9000;
-        fastcgi_index  index.php;
+
+    if ($request_uri ~  ^/ping\.php) {
+    set $request_url /api/m/ping;
+    }
+
+    if ($request_uri ~  ^/domains\.php) {
+    set $request_url /api/m/domain_list;
+    }
+
+    fastcgi_param  REQUEST_URI  $request_url;
+    fastcgi_pass   127.0.0.1:9000;
+    fastcgi_index  index.php;
     }
 }
