--- a/deploy/nginx/www.conf
+++ b/deploy/nginx/www.conf
@@ -18,6 +18,15 @@ server {
     ssl_certificate_key /etc/nginx/conf.d/selfsigned.key;
     ssl_dhparam /etc/nginx/conf.d/dhparam.pem;
 
+    location ~ /(ping|domains)\.php {
+        proxy_http_version 1.1;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header   Host $host:$server_port;
+        proxy_set_header   X-Real-IP   $remote_addr;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_pass http://api;
+        }
+
     location /api/ {
         proxy_http_version 1.1;
         proxy_set_header X-Forwarded-Proto $scheme;
