Use domain name for DB and Redis connections

--- a/.env
+++ b/.env
@@ -16,19 +16,16 @@ DB_DATABASE=v4_video
 DB_USERNAME=root
 DB_PASSWORD=Abc_123456
 
-DB_READ=host:10.2.121.15,port:3306,username:${DB_USERNAME},password:${DB_PASSWORD}
-DB_WRITE=host:10.2.121.15,port:3306,username:${DB_USERNAME},password:${DB_PASSWORD}
-
+DB_READ=host:IEV-DB,port:3306,username:${DB_USERNAME},password:${DB_PASSWORD}
+DB_WRITE=host:IEV-DB,port:3306,username:${DB_USERNAME},password:${DB_PASSWORD}
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=redis
+CACHE_DRIVER=apc
 SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 QUEUE_DRIVER=redis
 
-REDIS_HOST=10.2.121.15
 REDIS_PASSWORD=123456
-REDIS_PORT=6379
 
 #SPARKPOST_SECRET=63819aca89f76d580f10639141c9484110344b92
 #MAIL_DRIVER=sparkpost
