--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
         "hashids/hashids": "^3.0",
+        "jenssegers/agent": "^2.6",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "lcobucci/jwt": "^3.2",
